@@ -35,6 +35,7 @@ import java.awt.event.MouseListener;
 import java.beans.PropertyChangeEvent;
 import java.beans.PropertyVetoException;
 import java.math.BigDecimal;
+import java.math.RoundingMode;
 import java.text.DecimalFormat;
 import java.text.ParseException;
 
@@ -559,7 +560,7 @@ public final class VNumber extends JComponent
 			if (!m_modified)
 				return null;
 			if (m_displayType == DisplayType.Integer)
-				return new Integer(0);
+				return Integer.valueOf(0);
 			return Env.ZERO;
 		}
 		if (value.equals(".") || value.equals(",") || value.equals("-"))
@@ -575,10 +576,10 @@ public final class VNumber extends JComponent
 			value = number.toString();      //	converts it to US w/o thousands
 			BigDecimal bd = new BigDecimal(value);
 			if (m_displayType == DisplayType.Integer)
-				return new Integer(bd.intValue());
+				return Integer.valueOf(bd.intValue());
 			if (bd.signum() == 0)
 				return bd;
-			return bd.setScale(m_format.getMaximumFractionDigits(), BigDecimal.ROUND_HALF_UP);
+			return bd.setScale(m_format.getMaximumFractionDigits(), RoundingMode.HALF_UP);
 		}
 		catch (Exception e)
 		{
@@ -586,7 +587,7 @@ public final class VNumber extends JComponent
 		}
 		m_text.setText(m_format.format(0));
 		if (m_displayType == DisplayType.Integer)
-			return new Integer(0);
+			return Integer.valueOf(0);
 		return Env.ZERO;
 	}	//	getValue
 
@@ -679,12 +680,12 @@ public final class VNumber extends JComponent
 				if (ii  < m_minValue)
 				{
 					error = oo + " < " + m_minValue;
-					oo = new Integer(m_minValue.intValue());
+					oo = Integer.valueOf(m_minValue.intValue());
 				}
 				else if (ii > m_maxValue)
 				{
 					error = oo + " > " + m_maxValue;
-					oo = new Integer(m_maxValue.intValue());
+					oo = Integer.valueOf(m_maxValue.intValue());
 				}
 			}
 			else if (oo instanceof BigDecimal)
