@@ -174,7 +174,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner("ext-" + C_BPARTNER_EXTERNAL_ID);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -186,7 +186,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner(Integer.toString(C_BPARTNER_ID));
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -198,7 +198,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner("gln-" + C_BPARTNER_LOCATION_GLN);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -212,7 +212,7 @@ class BpartnerRestControllerTest
 				"ext-" + C_BPARTNER_EXTERNAL_ID,
 				Integer.toString(AD_USER_ID));
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseContact resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -226,7 +226,7 @@ class BpartnerRestControllerTest
 				"ext-" + C_BPARTNER_EXTERNAL_ID,
 				"gln-" + C_BPARTNER_LOCATION_GLN);
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseLocation resultBody = result.getBody();
 
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
@@ -401,7 +401,7 @@ class BpartnerRestControllerTest
 		final JsonRequestBPartnerUpsert bpartnerUpsertRequest = loadUpsertRequest("BPartnerRestControllerTest_Update_BPartner_Name_Insert_Location.json");
 
 		assertThat(bpartnerUpsertRequest.getRequestItems()).hasSize(1);
-		assertThat(bpartnerUpsertRequest.getRequestItems().get(0).getBpartnerComposite().getLocationsNotNull().getRequestItems()).hasSize(1);
+		assertThat(bpartnerUpsertRequest.getRequestItems().getFirst().getBpartnerComposite().getLocationsNotNull().getRequestItems()).hasSize(1);
 
 		final I_C_BPartner bpartnerRecord = newInstance(I_C_BPartner.class);
 		bpartnerRecord.setAD_Org_ID(AD_ORG_ID);
@@ -427,7 +427,7 @@ class BpartnerRestControllerTest
 
 		// use the rest controller to get the json that we can then verify
 		final ResponseEntity<JsonResponseComposite> result = bpartnerRestController.retrieveBPartner("val-12345");
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseComposite resultBody = result.getBody();
 		expect.serializer("orderedJson").toMatchSnapshot(resultBody);
 
@@ -489,12 +489,12 @@ class BpartnerRestControllerTest
 			@NonNull final ResponseEntity<JsonResponseBPartnerCompositeUpsert> result,
 			@NonNull final String bpartnerIdentifier)
 	{
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseBPartnerCompositeUpsert resultBody = result.getBody();
 		assertThat(resultBody.getResponseItems()).hasSize(1);
 
-		final JsonResponseBPartnerCompositeUpsertItem responseCompositeItem = resultBody.getResponseItems().get(0);
+		final JsonResponseBPartnerCompositeUpsertItem responseCompositeItem = resultBody.getResponseItems().getFirst();
 		assertThat(responseCompositeItem.getResponseBPartnerItem().getIdentifier()).isEqualTo(bpartnerIdentifier);
 
 		final JsonMetasfreshId metasfreshId = responseCompositeItem.getResponseBPartnerItem().getMetasfreshId();
@@ -521,7 +521,7 @@ class BpartnerRestControllerTest
 		initialCounts.assertCountsUnchanged();
 
 		assertThat(result.getBody().getResponseItems()).hasSize(1);
-		final JsonResponseBPartnerCompositeUpsertItem jsonResponseCompositeUpsertItem = result.getBody().getResponseItems().get(0);
+		final JsonResponseBPartnerCompositeUpsertItem jsonResponseCompositeUpsertItem = result.getBody().getResponseItems().getFirst();
 
 		assertThat(jsonResponseCompositeUpsertItem.getResponseBPartnerItem().getIdentifier()).isEqualTo("ext-1234567");
 		assertThat(jsonResponseCompositeUpsertItem.getResponseBPartnerItem().getMetasfreshId().getValue()).isEqualTo(bpartnerRecord.getC_BPartner_ID());
@@ -593,11 +593,11 @@ class BpartnerRestControllerTest
 				"gln-" + C_BPARTNER_LOCATION_GLN,
 				JsonRequestContactUpsert.builder().requestItem(jsonContact).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo(jsonContact.getContactIdentifier());
 
 		final JsonMetasfreshId metasfreshId = responseItem.getMetasfreshId();
@@ -646,11 +646,11 @@ class BpartnerRestControllerTest
 						.contact(jsonContact)
 						.build()).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo(contactIdentifier);
 
 		final JsonMetasfreshId metasfreshId = responseItem.getMetasfreshId();
@@ -680,11 +680,11 @@ class BpartnerRestControllerTest
 				"ext-" + C_BPARTNER_EXTERNAL_ID,
 				JsonRequestLocationUpsert.builder().requestItem(jsonLocation).build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 
 		assertThat(responseItem.getIdentifier()).isEqualTo(jsonLocation.getLocationIdentifier());
 
@@ -695,7 +695,7 @@ class BpartnerRestControllerTest
 
 		assertThat(persistedPage).hasSize(1);
 
-		final BPartnerComposite persistedResult = persistedPage.get(0);
+		final BPartnerComposite persistedResult = persistedPage.getFirst();
 		final Optional<BPartnerLocation> persistedLocation = persistedResult.extractLocation(BPartnerLocationId.ofRepoId(persistedResult.getBpartner().getId(), metasfreshId.getValue()));
 		assertThat(persistedLocation).isPresent();
 
@@ -716,10 +716,10 @@ class BpartnerRestControllerTest
 								.build())
 						.build());
 
-		assertThat(result.getStatusCode()).isEqualByComparingTo(HttpStatus.CREATED);
+		assertThat(result.getStatusCode()).isEqualTo(HttpStatus.CREATED);
 		final JsonResponseUpsert response = result.getBody();
 		assertThat(response.getResponseItems()).hasSize(1);
-		final JsonResponseUpsertItem responseItem = response.getResponseItems().get(0);
+		final JsonResponseUpsertItem responseItem = response.getResponseItems().getFirst();
 		assertThat(responseItem.getIdentifier()).isEqualTo("iban-1");
 		assertThat(responseItem.getMetasfreshId()).isNotNull();
 
@@ -754,7 +754,7 @@ class BpartnerRestControllerTest
 		// invoke the method under test
 		final ResponseEntity<JsonResponseCompositeList> page1 = bpartnerRestController.retrieveBPartnersSince(0L, null);
 
-		assertThat(page1.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page1.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page1Body = page1.getBody();
 		assertThat(page1Body.getItems()).hasSize(2);
 
@@ -763,7 +763,7 @@ class BpartnerRestControllerTest
 
 		final ResponseEntity<JsonResponseCompositeList> page2 = bpartnerRestController.retrieveBPartnersSince(null, page2Id);
 
-		assertThat(page2.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page2.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page2Body = page2.getBody();
 		assertThat(page2Body.getItems()).hasSize(2);
 
@@ -772,7 +772,7 @@ class BpartnerRestControllerTest
 
 		final ResponseEntity<JsonResponseCompositeList> page3 = bpartnerRestController.retrieveBPartnersSince(null, page3Id);
 
-		assertThat(page3.getStatusCode()).isEqualByComparingTo(HttpStatus.OK);
+		assertThat(page3.getStatusCode()).isEqualTo(HttpStatus.OK);
 		final JsonResponseCompositeList page3Body = page3.getBody();
 		assertThat(page3Body.getItems()).hasSize(1);
 
