@@ -22,17 +22,6 @@ package manual;
  * #L%
  */
 
-import java.io.ByteArrayInputStream;
-import java.io.InputStream;
-import java.util.ArrayList;
-import java.util.List;
-import java.util.UUID;
-
-import org.apache.commons.codec.binary.Base64;
-import org.junit.Before;
-import org.junit.Ignore;
-import org.junit.Test;
-
 import de.metas.printing.client.Context;
 import de.metas.printing.client.encoder.JsonBeanEncoder;
 import de.metas.printing.client.endpoint.DirectoryPrintConnectionEndpoint;
@@ -40,6 +29,16 @@ import de.metas.printing.client.engine.PrintingEngine;
 import de.metas.printing.client.util.Util;
 import de.metas.printing.esb.api.PrintPackage;
 import de.metas.printing.esb.api.PrintPackageInfo;
+import org.apache.hc.client5.http.utils.Base64;
+import org.junit.Before;
+import org.junit.Ignore;
+import org.junit.Test;
+
+import java.io.ByteArrayInputStream;
+import java.io.InputStream;
+import java.util.ArrayList;
+import java.util.List;
+import java.util.UUID;
 
 // This is a manual test because on build server we don't have the XPS printer, so this test will always fail
 @Ignore
@@ -116,9 +115,9 @@ public class PrintingEngineTestManual
 		final PrintPackage printPackage = new JsonBeanEncoder().decodeStream(getClass().getResourceAsStream("/test02_printpackage.json"), PrintPackage.class);
 
 		// make sure we are using the right printer
-		printPackage.getPrintPackageInfos().get(0).setPrintService(printingServiceName);
-		printPackage.getPrintPackageInfos().get(0).setTray(printingTray);
-		printPackage.getPrintPackageInfos().get(0).setTrayNumber(printingTrayNumber);
+		printPackage.getPrintPackageInfos().getFirst().setPrintService(printingServiceName);
+		printPackage.getPrintPackageInfos().getFirst().setTray(printingTray);
+		printPackage.getPrintPackageInfos().getFirst().setTrayNumber(printingTrayNumber);
 
 		final byte[] data = Base64.decodeBase64(Util.toByteArray(getClass().getResourceAsStream("/test02_printpackage_data_base64.txt")));
 
